src/test/deca/syntax/valid/provided/affectation.deca
{
int x;
float y;
String s;
boolean t;
}