src/test/deca/syntax/invalid/decla_inst_inverse.deca
{
int y=5;
y=5*5;
int x;
}